instances/base/traefik/traefik-dashboard-secret.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: traefik-dashboard-basicauth
  namespace: traefik
spec:
  basicAuth:
    secret: pbe-traefik-dashboard-auth

# htpasswd -nb staging lab | openssl base64
# c3RhZ2luZzokYXByMSR0bnhrbGsyNSQ1THR1MDQuTTFPby9IZndmM2R3TW8xCgo=
