instances/base/traefik/traefik-dashboard-ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`traefik.milantech.live`)
      kind: Rule
      middlewares:
        - name: pbe-traefik-dashboard-basicauth
          namespace: traefik-system
      services:
        - name: api@internal
          kind: TraefikService
